    Higher value results more smoothness, but may lose accuracy.
  - Add average laptime pace calculation and output,
    which is now used in real-time fuel calculation for increased consistency and accuracy.
  - Add "laptime_pace_samples" option, which sets number of samples
    for average laptime pace calculation (EMA).
    Initial laptime sample is always based on player's all time personal best laptime if available.
    Value range in "1" to "20". Default is "6" samples. Set to "1" to disable averaging.
  - Add "laptime_pace_margin" option, which sets additional margin for current laptime
    that cannot exceed the sum of "laptime pace" and "margin".
    This option is used to minimize the impact of unusually slow laptime.
    Default value is "5" seconds. Minimum value is limited to "0.1".
  - Add "laptime_pace_exclusion_multiplier" option, which sets laptime multiplier
    for laptime pace exclusion check. Current laptime will be excluded from laptime pace
    calculation if it has exceeded the product of "laptime pace" and "exclusion multiplier".
    Default value is "1.2" (120% of laptime pace). Minimum value is limited to "1".
    This option can be useful for preventing extremely slow laptime from affecting
    laptime pace, such as during safety-car or yellow flag period.
    Note, this option is checked before "laptime_pace_margin". Invalid lap, pit-in and pit-out laps
    are always excluded from laptime pace calculation.

* Flag Widget
  - "Pit Request" indicator now shows "pit-in laps countdown" alongside
    "estimated remaining laps" reading that current fuel or energy can run.
    Note, "pit-in laps countdown" value is always calculated towards
    the finish line of current stint's final lap, and thus is always
    less than or equal to "estimated remaining laps" reading.
    If countdown drops below 1.0 (laps), it indicates the final lap of current stint,
    and driver should pit in before the end of current lap to refuel.