@@ -10,8 +10,10 @@ WIP
     which is now used in real-time fuel calculation for increased consistency and accuracy.
   - Add "laptime_pace_samples" option, which sets number of samples
     for average laptime pace calculation (EMA).
-    Initial laptime sample is always based on player's all time personal best laptime if available.
     Value range in "1" to "20". Default is "6" samples. Set to "1" to disable averaging.
+    Note, initial laptime pace is always based on player's all time personal best laptime if available.
+    If a new laptime is faster than current laptime pace, it will replace
+    current laptime pace without calculating average.
   - Add "laptime_pace_margin" option, which sets additional margin for current laptime
     that cannot exceed the sum of "laptime pace" and "margin".
     This option is used to minimize the impact of unusually slow laptime.
@@ -24,6 +26,9 @@ WIP
     laptime pace, such as during safety-car or yellow flag period.
     Note, this option is checked before "laptime_pace_margin". Invalid lap, pit-in and pit-out laps
     are always excluded from laptime pace calculation.
+
+* Vehicles Module
+  - Fixed pit timer incorrectly reset after pit out.
 
 * Flag Widget
   - "Pit Request" indicator now shows "pit-in laps countdown" alongside
